# jimny-sierra-jb74w-manual-ru

./: .gitignore  README.md  Taskfile.yml  mkdocs.dev.yml  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: 00-introduction.md  01-quick-guide.md  02-safety.md  03-before-driving.md  04-driving.md  05-equipment.md  06-care.md  07-emergency.md  08-service-data.md  09-index.md  index.md
docs/stylesheets/: extra.css
scripts/: dev_server.py
